--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <ul id="messages"></ul>
   <form id="form">
-    <input id="input" autocomplete="on" /><button>Enviar</button>
+    <input id="input" autocomplete="off" /><button>Enviar</button>
   </form>
   <script src="/socket.io/socket.io.js"></script>
   <script>
